<resources>
    <string name="app_name">MedCare</string>
    <string name="Login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Orario">Orario</string>
    <string name="nome">Nome</string>
    <string name="NomeDettaglio">Nome:</string>
    <string name="quantita">Quantità:</string>
    <string name="quantità">Quantità</string>
    <string name="principio">Principio Attivo:</string>
    <string name="conferma">conferma</string>
    <string name="menuConferma">Conferma</string>
    <string name="PrincipioAttivo">Principio Attivo</string>
    <string name="AggiungiFoto">Aggiungi una foto</string>
    <string name="AggiungiMed">Aggiungi un medicinale</string>
    <string name="Benvento">Benvenuto!</string>
    <string name="Inizio">Vai al piano terapeutico</string>
    <string name="Elimina">Elimina</string>
    <string name="Modifica">Modifica</string>
    <string name="Orario2">Orario:</string>

</resources>
