<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InserimentoFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="75dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/AggiungiFoto"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/AggiungiFoto" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="213dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/AggiungiMed"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="@string/AggiungiMed" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/Orario"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText7"
        app:layout_constraintStart_toEndOf="@+id/editText7" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:hint="@string/quantità"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/PrincipioAttivo"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

</android.support.constraint.ConstraintLayout>